<resources>
    <string name="app_name">Final fyp</string>
    <string name="tab_text_1">Newsfeed</string>
    <string name="tab_text_2">Categories</string>
    <string name="tab_text_3">Notifications</string>
    <string name="description_of_place">Description of place</string>
    <string name="place">place</string>
    <string-array name="categories">
        <item>Historical Places</item>
        <item>Hotels</item>
    </string-array>

    <string-array name="historical_places">
        <item>Badshahi Mosque</item>
        <item>Minar-e-Pakistan</item>
        <item>Lahore Fort</item>
    </string-array>
    <string-array name="hotels">
        <item>Pearl Continental Hotel</item>
        <item>The Nishat Hotel</item>
        <item>Luxus Grand Hotel</item>
    </string-array>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="sign_up">Sign Up</string>
    <string name="startimage">startImage</string>
    <string name="welcome_to_green_expeditour">Welcome to Green Expeditour</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="pass">*****</string>
    <string name="check_in">Check in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="permenantely_closed">Permanently closed</string>

</resources>
